--- a/app/src/main/res/layout/activity_reblog_recommendations.xml
+++ b/app/src/main/res/layout/activity_reblog_recommendations.xml
@@ -9,8 +9,11 @@
     tools:context=".ReblogRecommendations">
 
     <TextView
-        android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"
+        android:id="@+id/textView"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
