--- a/app/src/main/res/layout/activity_reblog_recommendations.xml
+++ b/app/src/main/res/layout/activity_reblog_recommendations.xml
@@ -6,14 +6,89 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ReblogRecommendations">
+    tools:context="com.ricazhang.tumblrtips.ReblogRecommendationsActivity"
+    android:id="@+id/blogList"
+    android:background="#ff37475e">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:id="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/tumblr"
+        android:id="@+id/tumblr"
+        android:textIsSelectable="true"
+        android:textSize="50dp"
+        android:layout_marginTop="68dp"
+        android:textColor="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:layout_marginBottom="30dp"
+        android:typeface="serif"
+        android:layout_marginLeft="18dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/tips"
+        android:id="@+id/tips"
+        android:textIsSelectable="true"
+        android:textSize="50dp"
+        android:textColor="#ffffffff"
+        android:layout_alignBottom="@+id/tumblr"
+        android:layout_toRightOf="@+id/tumblr"
+        android:layout_marginLeft="8dp"
+        android:typeface="serif" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/finish_tumblr_url"
+        android:id="@+id/tumblrUrlEnding"
+        android:textSize="@dimen/abc_action_bar_title_text_size"
+        android:layout_below="@+id/tumblr"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="15dp"
+        android:textColor="#ffffffff" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_alignBottom="@+id/tumblrUrlEnding"
+        android:layout_toLeftOf="@+id/tumblrUrlEnding"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="15dp"
+        android:textColor="#ffffffff"
+        android:textAlignment="center" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go_button_text"
+        android:id="@+id/goButton"
+        android:layout_below="@+id/tumblrUrlEnding"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:background="#ff838e96"
+        android:singleLine="false"
+        android:textColor="#ffffffff"
+        android:layout_gravity="center"/>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/recommendedBlogsList"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/goButton"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true" />
 
 </RelativeLayout>
